draw.pl: Added hand labels and fixed draw_legal_moves to use get_highlight_color/2. game_model_tiles.pl: added tile color to mismatch info. game_view_tiles.pl: Fixed layout to work for 3 players. Added hand labels. Added fudge value to shift center to the right 100 pixels. locations.pl: Added adapt_transform_colors/3 to adjust for 3 color mismatches. mosaic.html: Changed 'New' to 'New 2 Player Game' and 'New 3 Player Game'. tiles.pl: Extended start_mosaic_game/0 to /1 with NumberOfPlayers param. Added fail_save/1 utility to reduce heap usage. Added and disabled draw_tile_animation/4 (disabled for debugging). view_basics.pl: Added 3rd player colors. Added label height and width.

--- a/src/mosaic.css
+++ b/src/mosaic.css
@@ -10,6 +10,9 @@ h1, h2, h3, h4, h5, h6 {
     font-family: arial, verdana, sans-serif;
 }
 
+player {
+    color: #CCCCFF;
+}
 .mosaic-description {
     width: 150px;
     float: left;
